--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,17 @@
-title: Kishore Umaprasad
+title: <p align="center"> Kishore Umaprasad </p>
 logo: /assets/img/kishore.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description:  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/sajan-kedia-b06a6821/">LinkedIn</a> |
+  <a href="https://github.com/sajankedia">GitHub</a>
+ 
+  <br>  
+  I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
+  Also handing the Big Data from real-time Ad call data.
+  Worked with IBM Research at Big Data Analytics team.
+  Working in AdTech domain for 3 years.
+  <br>
+  </p>
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
