--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <p align="center"> Kishore Umaprasad </p>
 logo: /assets/img/kishore.png
 description:  <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/ukishore33/">LinkedIn</a> |
+  <a href="https://www.linkedin.com/in/kishore330033/">LinkedIn</a> |
   <a href="https://github.com/ukishore33">GitHub</a>
  
   <br>  
