--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,7 @@ description:  <p align="center">
   <a href="https://github.com/ukishore33">GitHub</a>
  
   <br>  
-  I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
-  Also handing the Big Data from real-time Ad call data.
-  Worked with IBM Research at Big Data Analytics team.
-  Working in AdTech domain for 3 years.
+  🔭 i'm currently working on violavizn technologies. <br>👯 i'm looking to collaborate on projects related to combination of Finance, Management, Data Science and  Generative AI related topics. <br>🌱 I'm currently learning Stock market Analysis and Generative AI. <br>💬 Ask me about Finance, Management, Data Science and  Generative AI related topics. 
   <br>
   </p>
 
