--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:  <p align="center">
   <a href="https://github.com/ukishore33">GitHub</a>
  
   <br>  
-  🔭 i'm currently working on violavizn technologies. <br>👯 i'm looking to collaborate on projects related to combination of Finance, Management, Data Science and  Generative AI related topics. <br>🌱 I'm currently learning Stock market Analysis and Generative AI. <br>💬 Ask me about Finance, Management, Data Science and  Generative AI related topics. 
+ 👯 i'm looking to collaborate on projects related to combination of Finance, Management, Data Science and  Generative AI related topics. <br>🌱 I'm currently learning Stock market Analysis and Generative AI. <br>💬 Ask me about Finance, Management, Data Science and  Generative AI related topics. 
   <br>
   </p>
 
